--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -4,7 +4,7 @@ include sources-mini-gmp.mk
 
 PKG_CFLAGS=$(C_VISIBILITY)
 PKG_CXXFLAGS=$(CXX_VISIBILITY)
-PKG_FFLAGS=$(F_VISIBILITY)
+PKG_FFLAGS=
 
 PKG_CPPFLAGS=-DUSING_R -I. -Ivendor -Ivendor/cigraph/src -Ivendor/cigraph/include -Ivendor/cigraph/vendor -Ivendor/io/parsers @cflags@ \
     -DNDEBUG -DNTIMER -DNPRINT -DIGRAPH_THREAD_LOCAL= \
